@@ -38,7 +38,7 @@ use eSTAR::Util;
 @ISA = qw/Exporter/;
 @EXPORT_OK = qw/ send_mail /;
 
-'$Revision: 1.2 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
+'$Revision: 1.3 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
 
 
 sub send_mail {
@@ -63,6 +63,8 @@ sub send_mail {
    
    if ( $@ ) {
      $log->error("Error: $@");
+   } elsif ( ! defined $smtp ) {
+     $log->error("Error: \$smtp is undefined. Mail not sent...");
    } else {
 
      $log->debug( "Talking to mailserver..." );
@@ -92,7 +94,7 @@ sub send_mail {
 
 =head1 REVISION
 
-$Id: Mail.pm,v 1.2 2005/02/15 16:04:51 aa Exp $
+$Id: Mail.pm,v 1.3 2005/02/15 17:00:34 aa Exp $
 
 =head1 AUTHORS
 
